[project]
name = "timelapsetracking"
version = "0.0.2"
description = "Tracking code and scripts for the timelapse analysis project"
authors = [
    {name = "Filip Sluzewski", email = "filip.sluzewski@alleninstitute.org"},
    {name = "Chek Ounkomol"},
    {name = "Jianxu Chen"},
]
dependencies = [
    "aicsimageio",
    "fire",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "tifffile<2022.4.22",
    "tqdm>=4.66.1",
    "pre-commit>=3.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/aics-int/aics-timelapse-tracking"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "autoflake",
    "black",
    "flake8",
    "isort",
    "pre-commit",
]
interactive_dev = [
    "ipython",
    "ipywidgets",
    "itkwidgets",
    "jupyter",
    "matplotlib",
]

[project.scripts]
run_tracking = "timelapsetracking.run_tracking:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
